# harbour-ferniegram

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  asteroid-fernschreiber2.desktop  harbour-ferniegram.desktop  harbour-fernschreiber2.pro
.github/workflows/: main.yml
doc/: development.md  emojis.md
libs/opal/sfpm/: CMakeLists.txt
qml/: harbour-ferniegram.qml  harbour-fernschreiber2.qml
qml/asteroid/: asteroid-fernschreiber2.qml
qml/asteroid/components/: AppNotification.qml
qml/asteroid/pages/: OverviewPage.qml
qml/components/: AppNotification.qml  ChatListViewItem.qml  ChatsView.qml  InlineQuery.qml  MessageListViewItem.qml  MessageListViewItemSimple.qml  MessageOverlayFlickable.qml  MessagePropertiesLoader.qml  MessagesView.qml  NewMessageColumn.qml  OpaqueButton.qml  PhotoTextsListItem.qml  ProfilePictureList.qml  ProfileThumbnail.qml  RecentActorsList.qml  TDLibChatListItem.qml  TDLibImage.qml  TDLibMinithumbnail.qml  TDLibPhoto.qml  TDLibSticker.qml  VoiceNoteOverlay.qml
qml/components/chat/: ChatManagerLoader.qml  ChatPendingJoinRequestsItem.qml  MessagesView.qml  NewMessageColumn.qml
qml/components/chatInformationPage/: ChatInformationPageContent.qml  ChatInformationTabItemBase.qml  ChatInformationTabItemChatsBase.qml  ChatInformationTabItemGifs.qml  ChatInformationTabItemGroupsInCommon.qml  ChatInformationTabItemMedia.qml  ChatInformationTabItemMediaBase.qml  ChatInformationTabItemMediaVideoNotes.qml  ChatInformationTabItemMembers.qml  ChatInformationTabItemMembersGroups.qml  ChatInformationTabItemSettings.qml  ChatInformationTabItemSimilarBots.qml  ChatInformationTabItemSimilarChats.qml  ChatInformationTabView.qml  EditGroupChatPermissionsColumn.qml
qml/components/chatList/: ChatListViewItem.qml  ChatsView.qml
qml/components/inlineQueryResults/: InlineQueryResultGame.qml
qml/components/messageContent/: AlbumMessageContentBase.qml  MessageContentBase.qml  MessageContentFileInfoBase.qml  MessageGame.qml  MessagePhoto.qml  MessagePhotoAlbum.qml  MessagePoll.qml  MessageSticker.qml  MessageVideo.qml  MessageVoiceNote.qml  SponsoredMessage.qml  WebPagePreview.qml
qml/components/messageContent/mediaAlbumPage/: FullscreenOverlay.qml  PhotoComponent.qml  VideoComponent.qml  ZoomImage.qml
qml/components/settingsPage/: SettingsAdvanced.qml  SettingsAppearance.qml  SettingsBehavior.qml  SettingsPrivacy.qml  SettingsSession.qml  SettingsStorage.qml  SettingsUserProfile.qml
qml/dialogs/: AddProxyDialog.qml  ArchiveChatListTutorialDialog.qml  AuthKeyDropDialog.qml
qml/harbour/: harbour-fernschreiber2.qml
qml/harbour/components/: AppNotification.qml  MessageListViewItem.qml  PhotoTextsListItem.qml  ProfileThumbnail.qml  TDLibAnimatedSticker.qml  TDLibStickerBase.qml  TextBadge.qml  VoiceNoteOverlay.qml
qml/harbour/components/chat/: ChatBotSponsoredMessageItem.qml  ChatHeader.qml  ChatPendingJoinRequestsItem.qml  MessagesView.qml  NewMessageColumn.qml  TopicsListView.qml
qml/harbour/components/messageContent/: MessageContentBase.qml  MessageDice.qml
qml/harbour/components/settingsPage/: SettingsBehavior.qml
qml/harbour/js/: platform-functions.js
qml/harbour/pages/: ArchivedChatsPage.qml  ChatPage.qml  ChatPendingJoinRequestsPage.qml  CoverPage.qml  DebugPage.qml  OverviewPage.qml  SearchChatsPage.qml  TranslatePage.qml
qml/js/: functions.js  twemoji.js
qml/pages/: AboutPage.qml  ArchivedChatsPage.qml  ChatInformationPage.qml  ChatPage.qml  ChatPendingJoinRequestsPage.qml  ChatSelectionPage.qml  CoverPage.qml  CustomizeNotificationsPage.qml  DebugPage.qml  EmbeddedPlayerPage.qml  InitializationPage.qml  MediaAlbumPage.qml  NewChatPage.qml  NotificationSoundSelectionPage.qml  OverviewPage.qml  PollResultsPage.qml  ProfilePicturesPage.qml  ProxiesPage.qml  SearchChatsPage.qml  SettingsPage.qml  TranslatePage.qml
qml/shared/components/: MainShared.qml
qml/shared/js/: functions.js  platform-functions.js
recipe/: README.md  asteroid-fernschreiber2.bb  tdlib.bb
rpm/: harbour-ferniegram.changes  harbour-ferniegram.spec  harbour-fernschreiber2.changes  harbour-fernschreiber2.spec
src/: appsettings.cpp  appsettings.h  asteroid-fernschreiber2.cpp  basemessagabledata.cpp  basemessagabledata.h  callsmanager.cpp  callsmanager.h  chatdata.cpp  chatdata.h  chatfoldersmodel.cpp  chatfoldersmodel.h  chatlistmodel.cpp  chatlistmodel.h  chatmanager.cpp  chatmanager.h  chatmodel.cpp  chatmodel.h  contactsmodel.cpp  contactsmodel.h  fernschreiberutils.cpp  fernschreiberutils.h  folderchatlistmodel.cpp  folderchatlistmodel.h  forumtopicsmodel.cpp  forumtopicsmodel.h  gstaudiorecorder.cpp  gstaudiorecorder.h  harbour-ferniegram.cpp  harbour-fernschreiber2.cpp  knownusersmodel.cpp  lottieitem.cpp  lottieitem.h  mainshared.h  mediamessagesmodel.cpp  messagedata.h  messagesmodel.cpp  messagesmodel.h  movieitem.cpp  movieitem.h  notificationmanager.cpp  (+18 more)
src/chat/: chatmanager.cpp  chatmanager.h  forumtopic.cpp  forumtopic.h  forumtopicmessagesmodel.cpp  forumtopicmessagesmodel.h  forumtopicsmodel.cpp  forumtopicsmodel.h  jumpablemessagesmodel.cpp  jumpablemessagesmodel.h  mediamessagesmodel.cpp  mediamessagesmodel.h  messagedata.cpp  messagedata.h  messagesmodel.cpp  messagesmodel.h  readablemessagesmodel.cpp  readablemessagesmodel.h
src/tdlib/: tdlibreceiver.cpp  tdlibreceiver.h  tdlibwrapper.cpp  tdlibwrapper.h
translations/: harbour-ferniegram-de.ts  harbour-ferniegram-en.ts  harbour-ferniegram-es.ts  harbour-ferniegram-fr.ts  harbour-ferniegram-hu.ts  harbour-ferniegram-it.ts  harbour-ferniegram-pl.ts  harbour-ferniegram-ru.ts  harbour-ferniegram-sk.ts  harbour-ferniegram-sv.ts  harbour-ferniegram-zh_CN.ts  harbour-ferniegram.ts  harbour-fernschreiber-it.ts  harbour-fernschreiber2-de.ts  harbour-fernschreiber2-en.ts  harbour-fernschreiber2-es.ts  harbour-fernschreiber2-fi.ts  harbour-fernschreiber2-fr.ts  harbour-fernschreiber2-hu.ts  harbour-fernschreiber2-it.ts  harbour-fernschreiber2-pl.ts  harbour-fernschreiber2-ru.ts  harbour-fernschreiber2-sk.ts  harbour-fernschreiber2-sv.ts  harbour-fernschreiber2-zh_CN.ts  harbour-fernschreiber2.ts
(+3 files in other folders)
